# planner-executer-agentic-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  fresh-cluster-setup.md  mypy.ini  pyproject.toml  test.db  test.txt  text.md
libs/core/: __init__.py  capability_registry.py  capability_reranker.py  capability_search.py  capability_search_eval.py  capability_search_feedback.py  capability_search_feedback_eval.py  capability_search_training.py  chat_boundary_eval.py  chat_clarification_eval.py  chat_contracts.py  chat_routing_calibrator.py  chat_routing_calibrator_eval.py  chat_routing_feedback.py  chat_routing_reranker.py  chat_routing_training.py  deepeval_agents.py  deepeval_support.py  document_store.py  events.py  execution_contracts.py  feedback_eval.py  intent_contract.py  intent_eval.py  intent_tuning.py  job_projection.py  llm_provider.py  logging.py  mcp_gateway.py  memory_client.py  memory_redaction.py  memory_registry.py  models.py  orchestrator.py  payload_resolver.py  planner_contracts.py  planner_support_tools.py  policy_engine.py  prompts.py  pyproject.toml  (+11 more)
libs/core/agentic_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/core/tests/: test_agent_definitions.py  test_capability_registry.py  test_capability_reranker.py  test_capability_search.py  test_capability_search_eval.py  test_capability_search_feedback.py  test_capability_search_feedback_eval.py  test_capability_search_training.py  test_chat_boundary_eval.py  test_chat_clarification_eval.py  test_chat_contracts.py  test_chat_routing_calibrator.py  test_chat_routing_calibrator_eval.py  test_chat_routing_feedback.py  test_chat_routing_reranker.py  test_chat_routing_training.py  test_coder_tools.py  test_deepeval_agents.py  test_document_store.py  test_execution_contracts.py  test_feedback_eval.py  test_intent_contract.py  test_intent_eval.py  test_intent_tuning.py  test_job_projection.py  test_llm_provider.py  test_mcp_client.py  test_memory_redaction.py  test_orchestrator.py  test_payload_resolver.py  test_planner_contracts.py  test_planner_support_tools.py  test_resume_llm.py  test_run_specs.py  test_state_machine.py  test_tool_bootstrap.py  test_tool_catalog.py  test_tool_governance.py  test_tool_plugins.py  test_tool_registry.py  (+3 more)
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  alembic.ini  chat_clarification_normalizer.py  chat_execution_service.py  chat_service.py  context_service.py  database.py  dispatch_service.py  feedback_service.py  intent_service.py  main.py  memory_profile_service.py  memory_promotion_service.py  memory_store.py  models.py  replan_controller.py
services/api/tests/: test_agent_definition_api.py  test_agent_definition_models.py  test_api.py  (+13 more)
services/coder/: Dockerfile  __init__.py  pyproject.toml
services/critic/: Dockerfile  pyproject.toml
services/worker/: Dockerfile  pyproject.toml
(+468 files in other folders)
