[project]
name = "agentic-core"
version = "0.1.0"
description = "Shared core models and utilities"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "jsonschema>=4.21",
  "python-docx>=1.1",
  "mcp>=1.0.0",
  "sqlalchemy>=2.0",
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-exporter-otlp>=1.22.0",
  "structlog>=24.1.0",
  "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools]
py-modules = [
  "events",
  "llm_provider",
  "logging",
  "models",
  "orchestrator",
  "policy_engine",
  "schemas",
  "state_machine",
  "tool_registry",
  "tracing",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
