[project]
name = "agentic-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "redis>=5.0",
  "pydantic>=2.6",
  "prometheus-client>=0.19",
  "structlog>=24.1.0",
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
