[project]
name = "agentic-coder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "mcp>=1.0.0",
  "structlog>=24.1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools]
packages = ["app", "coder_core"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
