[project]
name = "agentic-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "redis>=5.0",
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "structlog>=24.1.0",
  "docxtpl>=0.16",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
